# AETHER

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_DECISION.md  INTERFACES.md  LICENSE-APACHE  LICENSE-MIT  README.md  REPO_LAYOUT.md  RULES.md  SECURITY.md  SPEC.md  TESTPLAN.md  requirements-release.txt
.github/: capacity-tracking.json  dependabot.yml  hardening-promotion-state.json  repository-controls.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  semantics_discussion.md
.github/workflows/: capacity-planning.yml  ci.yml  pages.yml  performance-matrix.yml  pilot-extended-operability.yml  pilot-validation.yml  qa-hardening.yml  release-readiness.yml  reusable-exact-candidate-evidence.yml  supply-chain.yml
crates/aether_api/: Cargo.toml
crates/aether_api/benches/: kernel_perf.rs
crates/aether_api/examples/: capture_performance_baseline.rs  demo_02_multi_worker_lease_handoff.rs  demo_03_coordination_situation_room.rs  demo_04_governed_incident_blackboard.rs  demo_05_ai_support_resolution_desk.rs  demo_06_aether_learn_service_report.rs  http_kernel_service.rs  performance_capacity_curves.rs  performance_capacity_report.rs  performance_dashboard.rs  performance_drift_report.rs  performance_host_snapshot.rs  performance_matrix_report.rs  performance_report.rs  performance_trend_report.rs  pilot_coordination_delta_report.rs  pilot_coordination_report.rs  pilot_http_kernel_service.rs  replicated_partition_http_service.rs
crates/aether_api/src/: admission.rs  deployment.rs  evaluation.rs  execution.rs  http.rs  lib.rs  partitioned.rs  perf.rs  report.rs  sidecar.rs  status.rs
crates/aether_api/src/perf/: capacity.rs
crates/aether_api/tests/: append_admission.rs  execution_handles.rs  http_service.rs  performance_stress.rs  pilot_contract.rs  pilot_soak.rs  policy_noninterference.rs  semantic_closure.rs  sidecar_federation.rs
crates/aether_ast/: Cargo.toml
crates/aether_explain/: Cargo.toml
crates/aether_explain/examples/: demo_01_temporal_dependency_horizon.rs
crates/aether_explain/src/: lib.rs
crates/aether_http/: Cargo.toml
crates/aether_http/src/: http.rs  lib.rs
crates/aether_partition/: Cargo.toml
crates/aether_partition/src/: lib.rs
crates/aether_perf/: Cargo.toml
crates/aether_perf/src/: capacity.rs  lib.rs
crates/aether_pilot/: Cargo.toml
crates/aether_plan/: Cargo.toml
crates/aether_pol/: Cargo.toml  README.md
crates/aether_resolver/: Cargo.toml
crates/aether_resolver/src/: lib.rs
crates/aether_resolver/tests/: policy_scoped_replay.rs
crates/aether_rules/: Cargo.toml
crates/aether_rules/examples/: dsl_transitive_closure.rs
crates/aether_rules/src/: lib.rs  parser.rs
crates/aether_runtime/: Cargo.toml
crates/aether_runtime/examples/: demo_01_temporal_dependency_horizon.rs  runtime_demo_01_temporal_dependency_horizon.rs
crates/aether_runtime/src/: lib.rs
crates/aether_runtime/tests/: policy_scoped_execution.rs
crates/aether_schema/: Cargo.toml
crates/aether_service_core/: Cargo.toml
crates/aether_service_core/src/: evaluation.rs  execution.rs  lib.rs  namespace.rs
crates/aether_sidecar/: Cargo.toml
crates/aether_sidecar/src/: lib.rs
crates/aether_storage/: Cargo.toml
crates/aether_storage/src/: lib.rs
crates/aether_storage/tests/: postgres_tls.rs
docs/: API_CLIENT_MIGRATION.md  ARCHITECTURE.md  ARCHITECTURE_BOUNDARIES.md  CAPACITY_PLANNING.md  COLAB_RUNTIME_LAB.md  COMMERCIAL_RELEASE_READINESS.md  COMPREHENSIVE_AUDIT_2026-07-09.md  DEVELOPER_WORKFLOW.md  DOCUMENTATION_STANDARD.md  FEDERATED_TRUTH_IMPLEMENTATION_PLAN.md  GLOSSARY.md  KNOWN_LIMITATIONS.md  OPERATIONS.md  PERFORMANCE.md  PILOT_COORDINATION.md  PILOT_DEPLOYMENT.md  PILOT_LAUNCH.md  PILOT_OPERATIONS_PLAYBOOK.md  QA.md  QA_HARDENING_PROGRAM.md  README.md  RELEASE_EVIDENCE.md  REMEDIATION_PROGRAMME.md  RESOURCE_CONTROL_CONTRACT.md  RESTART_LATENCY_INVESTIGATION.md  ROADMAP.md  SEMANTIC_COMPLIANCE_MATRIX.md  STATUS.md  SUPPLY_CHAIN_SECURITY.md  V1_CLOSEOUT.md  V2_EXTERNAL_REVIEW.md
docs/ADR/: 0001-authority-partitions-and-federated-cuts.md  0002-governed-incident-blackboard-is-demo-packaging.md  0003-rust-is-mainline-kernel-language.md  0004-aether-dsl-is-canonical-semantics-surface.md  0005-recursion-compiles-through-scc-and-semi-naive-execution.md  0006-go-is-a-shell-not-the-core-runtime.md  0007-sidecars-remain-subordinate-to-semantic-control.md  README.md  (+15 more)
examples/: README.md  demo-01-temporal-dependency-horizon.md  demo-02-multi-worker-lease-handoff.md  demo-03-coordination-situation-room.md  demo-04-governed-incident-blackboard.md  demo-05-ai-support-resolution-desk.md  demo-06-aether-learn-routing.md  demo-06-aether-pol-semantic-layer.md  demo-07-aether-pol-semantic-layer.md  transitive-closure.md
fixtures/: README.md
go/: README.md  go.mod  go.sum
python/: README.md  README_TUPLE_FACADE.md
scripts/: README.md  build-pilot-package.cmd  build-pilot-package.ps1  build_pages.py  build_presentation_assets.py  capacity_artifact_inventory.py  capacity_tracker.py  ci-postgres-tls.sh  colab_runtime_diagnostic.py  commercial_beta_promotion.py  commercial_readiness.py  customer_workflow_acceptance.py  hardening_promotion.py  new-pilot-token.cmd  new-pilot-token.ps1  performance_beta_gate.py  release_evidence.py  release_qualification.py  release_rollback_record.py  release_subjects.py  restart_latency_diagnostics.py  run-capacity-planner.cmd  run-capacity-planner.ps1  run-colab-runtime-diagnostic.ps1  run-colab-runtime-diagnostic.sh  run-demo-01.cmd  run-demo-02.cmd  run-demo-03.cmd  run-demo-04.cmd  run-demo-05.cmd  run-demo.ps1  run-hardening-sweep.cmd  run-hardening-sweep.ps1  run-performance-baseline.cmd  run-performance-baseline.ps1  run-performance-dashboard.cmd  run-performance-dashboard.ps1  run-performance-drift.cmd  run-performance-drift.ps1  run-performance-matrix.cmd  (+23 more)
site/: 404.html  deck.html  education.html  incident-blackboard.html  index.html  showcase.html  styles.css  support-resolution-desk.html  use-cases.html  vision.html
(+129 files in other folders)
