[package]
name = "aether_explain"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aether_ast = { path = "../aether_ast" }
aether_runtime = { path = "../aether_runtime" }
indexmap.workspace = true
thiserror.workspace = true

[dev-dependencies]
aether_resolver = { path = "../aether_resolver" }
aether_rules = { path = "../aether_rules" }
aether_schema = { path = "../aether_schema" }
