[package]
name = "aether_partition"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aether_ast = { path = "../aether_ast" }
aether_explain = { path = "../aether_explain" }
aether_resolver = { path = "../aether_resolver" }
aether_runtime = { path = "../aether_runtime" }
aether_schema = { path = "../aether_schema" }
aether_service_core = { path = "../aether_service_core" }
aether_storage = { path = "../aether_storage" }
indexmap.workspace = true
serde.workspace = true
serde_json = "1.0.133"
