[package]
name = "aether_perf"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aether_ast = { path = "../aether_ast" }
aether_explain = { path = "../aether_explain" }
aether_http = { path = "../aether_http" }
aether_partition = { path = "../aether_partition" }
aether_pilot = { path = "../aether_pilot" }
aether_plan = { path = "../aether_plan" }
aether_resolver = { path = "../aether_resolver" }
aether_rules = { path = "../aether_rules" }
aether_runtime = { path = "../aether_runtime" }
aether_schema = { path = "../aether_schema" }
aether_service_core = { path = "../aether_service_core" }
aether_sidecar = { path = "../aether_sidecar" }
aether_storage = { path = "../aether_storage" }
axum = { version = "=0.7.9", features = ["json"] }
serde.workspace = true
serde_json = "1.0.133"
sysinfo = "=0.30.13"
tokio = { version = "=1.44.2", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tower = { version = "=0.5.3", features = ["util"] }
