[package]
name = "aether_storage"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aether_ast = { path = "../aether_ast" }
postgres = { version = "=0.19.9", features = ["with-serde_json-1"] }
postgres-protocol = "=0.6.7"
postgres-types = "=0.2.8"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json = "1.0.133"
thiserror.workspace = true
tokio-postgres = "=0.7.12"
