[package]
name = "aether_storage"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aether_ast = { path = "../aether_ast" }
postgres = { version = "=0.19.14", features = ["with-serde_json-1"] }
native-tls = "=0.2.18"
postgres-native-tls = "=0.5.3"
postgres-protocol = "=0.6.12"
postgres-types = "=0.2.14"
rusqlite = { version = "=0.40.1", features = ["bundled"] }
serde.workspace = true
serde_json = "1.0.133"
sha2.workspace = true
thiserror.workspace = true
tokio-postgres = "=0.7.18"
